# ipccar5

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: pythonpackage.yaml
src/ipccar5/: AssignFP.py  Import2lmData.py  ReadFingerprint.py  cli.py  ipccar5_glaciers_fit.py  ipccar5_glaciers_postprocess.py  ipccar5_glaciers_preprocess.py  ipccar5_glaciers_project.py  ipccar5_icesheets_fit.py  ipccar5_icesheets_postprocess.py  ipccar5_icesheets_preprocess.py  ipccar5_icesheets_project.py
src/ipccar5_glaciers/: cli.py
validation/: ssp585_gslr_validate.py
